# pixel_sorting

./: .gitignore  CMakeLists.txt  build.bat  configure.bat  run.bat
include/: CMakeLists.txt  buffers.hpp  error.hpp  files.hpp  gui.hpp  gui_style.hpp  pixels.hpp  shaders.hpp  sorting.hpp  textures.hpp  vertices.hpp
src/: CMakeLists.txt  main.cpp  shaders.cpp
src/shaders/: fragmentShader.frag  fragmentShaderBackground.frag  fragmentShaderTexture.frag  vertexShader.vert  vertexShaderBackground.vert
